Fixed width of info-items in list on mobile.

--- a/static/css/mobile.less
+++ b/static/css/mobile.less
@@ -371,7 +371,7 @@ button {
                         .space-detail-list-image-inner { width: 100px; height: 67px; overflow: hidden; }
                     }
 
-                .space-detail-list-item { width: 37%; display: inline-block;
+                .space-detail-list-item { display: inline-block;
                 	.space-detail-labstats {
                 	                	.at2x('/static/img/comp-icon.png', 16px, 16px);
                 	                	//background-image: url('/static/img/comp-icon@2x.png'); background-size: 20px 20px;
